# fastfilters2

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  github_release.yml
cpp/: _core.cpp  benchmark.cpp  benchmarks.cpp  fastfilters2.cpp  fastfilters2.h  module.cpp  pymodule.cpp  util.h
python/fastfilters2/: __init__.py  _core.pyi  compat.py
src/fastfilters2/: __init__.py  __init__.pyi
tests/: test_fastfilters2.py
